--- a/scripts/plop/templates/component/component.hbs
+++ b/scripts/plop/templates/component/component.hbs
@@ -1,14 +1,14 @@
-import { html } from 'lit';
 import { customElement, property } from 'lit/decorators.js';
-import BaseElement from '../../internal/base-element';
-import { watch } from '../../internal/watch';
+import { html } from 'lit';
 import { LocalizeController } from '../../utilities/localize';
-import styles from './{{ tagWithoutPrefix tag }}.styles';
+import { watch } from '../../internal/watch';
+import BaseElement from '../internal/base-element';
+import styles from './{{ tagWithoutPrefix tag }}/{{ tagWithoutPrefix tag }}.styles';
 import type { CSSResultGroup } from 'lit';
 
 /**
  * @summary Short summary of the component's intended use.
- * @documentation https://cpsrepositorio.github.io/cps-elements/components/{{ tagWithoutPrefix tag }}
+ * @documentation https://cpsrepositorio.github.io/cps-elements/#/componentes/{{ tagWithoutPrefix tag }}
  * @status experimental
  * @since 0.1
  *
@@ -17,7 +17,7 @@ import type { CSSResultGroup } from 'lit';
  * @event cps-event-name - Emitted as an example.
  *
  * @slot - The default slot.
- * @slot example - An example slot.
+ * @slot example - An example named slot.
  *
  * @csspart base - The component's base wrapper.
  *
