chore: adjust component exports & React code generation

--- a/scripts/plop/templates/component/component.hbs
+++ b/scripts/plop/templates/component/component.hbs
@@ -45,6 +45,8 @@ export default class {{ properCase tag }} extends BaseElement {
   }
 }
 
+export { {{ properCase tag }} };
+
 declare global {
   interface HTMLElementTagNameMap {
     '{{ tag }}': {{ properCase tag }};
