--- a/scripts/plop/templates/component/docs.hbs
+++ b/scripts/plop/templates/component/docs.hbs
@@ -2,7 +2,7 @@
 
 [component-header:{{ tag }}]
 
-A description of the component goes here.
+Introdução sobre este componente vai aqui.
 
 ```html preview
 <{{ tag }}></{{ tag }}>
@@ -10,12 +10,12 @@ A description of the component goes here.
 
 ## Exemplos
 
-### First Example
+### Primeiro exemplo
 
-TODO
+Ainda não construído.
 
-### Second Example
+### Segundo exemplo
 
-TODO
+Ainda não construído.
 
 [component-metadata:{{ tag }}]
