--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -387,7 +387,7 @@
   --cps-fill-solid-primary: rgb(243 243 243);
   --cps-fill-solid-secondary: rgb(238 238 238);
   --cps-fill-solid-tertiary: rgb(249 249 249);
-  --cps-fill-solid-quaternary: rgb(3, 3, 3);
+  --cps-fill-solid-quaternary: rgb(254 254 254);
 
   /* Control fill colors */
   --cps-fill-control-primary: rgb(var(--cps-color-neutral-0) / 70%);
