chore: config & apply stylelint

--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -565,7 +565,7 @@
   --cps-tracking-tighter: -0.05em;
   --cps-tracking-tight: -0.025em;
   --cps-tracking-normal: 0em;
-  --cps-tracking-wider: 0.025em;
+  --cps-tracking-wide: 0.025em;
   --cps-tracking-wider: 0.05em;
   --cps-tracking-widest: 0.1em;
 
