--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -594,6 +594,11 @@
 
   --cps-button-border-width: 1px;
 
+  /* Icon Buttons */
+  --cps-icon-button-height-small: 1rem; /* 16px */
+  --cps-icon-button-height-medium: 1.375rem; /* 22px */
+  --cps-icon-button-height-large: 2.375rem; /* 38px */
+
   /* Inputs */
   --cps-input-height-small: 1.5rem; /* 24px */
   --cps-input-height-medium: 2rem; /* 32px */
