--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -605,6 +605,19 @@
   --cps-input-height-medium: 2rem; /* 32px */
   --cps-input-height-large: 2.5rem; /* 40px */
 
+  --cps-input-spacing-small: var(--cps-spacing-2); /* 8px */
+  --cps-input-spacing-medium: calc(var(--cps-spacing-3) - 1px); /* 11px */
+  --cps-input-spacing-large: var(--cps-spacing-3-5); /* 14px */
+
+  --cps-input-border-width: 1px;
+  --cps-input-border-color: var(--cps-fill-control-alt-tertiary);
+  --cps-input-border-bottom-color: var(--cps-foreground-tertiary);
+
+  --cps-input-background: var(--cps-fill-control-primary);
+  --cps-input-background-hover: var(--cps-fill-control-secondary);
+  --cps-input-background-active: rgb(var(--cps-color-neutral-0));
+  --cps-input-background-disabled: rgb(249 249 249 / 30%);
+
   --cps-input-required-content: '*';
   --cps-input-required-content-offset: -2px;
   --cps-input-required-content-color: inherit;
