--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -623,6 +623,11 @@
   --cps-input-required-content-offset: -2px;
   --cps-input-required-content-color: inherit;
 
+  /* Toggles (checkboxes, radios, switches) */
+  --cps-toggle-size-small: 1rem; /* 16px */
+  --cps-toggle-size-medium: 1.25rem; /* 20px */
+  --cps-toggle-size-large: 1.5rem; /* 24px */
+
   /*
    * Overlays
    */
