--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -390,6 +390,11 @@
   --cps-fill-solid-tertiary: rgb(40 40 40);
   --cps-fill-solid-quaternary: rgb(44 44 44);
 
+  /* Special backgrounds */
+  --cps-fill-acrylic-texture: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.2' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+  --cps-fill-acrylic: linear-gradient(rgb(44 44 44 / 91%), rgb(44 44 44 / 91%)), var(--cps-fill-acrylic-texture);
+  --cps-fill-acrylic-base: linear-gradient(rgb(32 32 32 / 96%), rgb(32 32 32 / 96%)), var(--cps-fill-acrylic-texture);
+
   /* Control fill colors */
   --cps-fill-control-primary: rgb(var(--cps-color-neutral-1000) / 6.05%);
   --cps-fill-control-secondary: rgb(var(--cps-color-neutral-1000) / 8.37%);
