--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -391,6 +391,12 @@
   --cps-fill-solid-tertiary: rgb(249 249 249);
   --cps-fill-solid-quaternary: rgb(254 254 254);
 
+  /* Special backgrounds */
+  --cps-fill-acrylic-texture: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.2' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+  --cps-fill-acrylic: linear-gradient(rgb(252 252 252 / 85%), rgb(252 252 252 / 85%)), var(--cps-fill-acrylic-texture);
+  --cps-fill-acrylic-base: linear-gradient(rgb(243 243 243 / 90%), rgb(243 243 243 / 90%)),
+    var(--cps-fill-acrylic-texture);
+
   /* Control fill colors */
   --cps-fill-control-primary: rgb(var(--cps-color-neutral-0) / 70%);
   --cps-fill-control-secondary: rgb(var(--cps-color-neutral-100) / 50%);
