--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -355,6 +355,9 @@
   --cps-color-accent-900: var(--cps-color-petrol-900);
   --cps-color-accent-950: var(--cps-color-petrol-950);
 
+  /* Textures */
+  --cps-texture-acrylic: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.2' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+
   /*
    * System Colors
    */
@@ -367,18 +370,26 @@
   /* Informative */
   --cps-fill-system-informative: rgb(96 205 255);
   --cps-fill-system-subtle-informative: rgba(255 255 255 / 3.26%);
+  --cps-fill-system-acrylic-informative: linear-gradient(rgb(48 48 48 / 96%), rgb(48 48 48 / 96%)),
+    var(--cps-texture-acrylic);
 
   /* Warning */
   --cps-fill-system-warning: rgb(252 225 0);
   --cps-fill-system-subtle-warning: rgb(67 53 25);
+  --cps-fill-system-acrylic-warning: linear-gradient(rgb(67 53 25 / 96%), rgb(67 53 25 / 96%)),
+    var(--cps-texture-acrylic);
 
   /* Critical */
   --cps-fill-system-critical: rgb(255 153 164);
   --cps-fill-system-subtle-critical: rgb(68 39 38);
+  --cps-fill-system-acrylic-critical: linear-gradient(rgb(68 39 38 / 96%), rgb(68 39 38 / 96%)),
+    var(--cps-texture-acrylic);
 
   /* Success */
   --cps-fill-system-success: rgb(108 203 95);
   --cps-fill-system-subtle-success: rgb(57 61 27);
+  --cps-fill-system-acrylic-success: linear-gradient(rgb(57 61 27 / 96%), rgb(57 61 27 / 96%)),
+    var(--cps-texture-acrylic);
 
   /*
    * Colors Tokens
@@ -391,9 +402,8 @@
   --cps-fill-solid-quaternary: rgb(44 44 44);
 
   /* Special backgrounds */
-  --cps-fill-acrylic-texture: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.2' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
-  --cps-fill-acrylic: linear-gradient(rgb(44 44 44 / 91%), rgb(44 44 44 / 91%)), var(--cps-fill-acrylic-texture);
-  --cps-fill-acrylic-base: linear-gradient(rgb(32 32 32 / 96%), rgb(32 32 32 / 96%)), var(--cps-fill-acrylic-texture);
+  --cps-fill-acrylic: linear-gradient(rgb(44 44 44 / 91%), rgb(44 44 44 / 91%)), var(--cps-texture-acrylic);
+  --cps-fill-acrylic-base: linear-gradient(rgb(32 32 32 / 96%), rgb(32 32 32 / 96%)), var(--cps-texture-acrylic);
 
   /* Control fill colors */
   --cps-fill-control-primary: rgb(var(--cps-color-neutral-1000) / 6.05%);
