--- a/docs/assets/plugins/code-block/code-block.css
+++ b/docs/assets/plugins/code-block/code-block.css
@@ -1,9 +1,9 @@
 .code-block {
   position: relative;
   margin-bottom: 1.5rem;
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-solid-quaternary);
+  background-color: var(--cps-color-background-solid-quaternary);
 }
 
 .code-block__preview {
@@ -11,7 +11,7 @@
   z-index: 1;
   border-top-left-radius: var(--cps-border-radius-medium);
   border-top-right-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-solid-tertiary);
+  background-color: var(--cps-color-background-solid-tertiary);
   padding: 1.5rem 3.25rem 1.5rem 1.5rem;
   min-width: 20rem;
   max-width: 100%;
@@ -38,13 +38,13 @@
   align-items: center;
   justify-content: center;
   z-index: -1;
-  border-right: solid 1px var(--cps-stroke-card-secondary);
-  border-left: solid 1px var(--cps-stroke-card-secondary);
+  border-right: solid 1px var(--cps-color-stroke-card-secondary);
+  border-left: solid 1px var(--cps-color-stroke-card-secondary);
   border-top-right-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-control-primary);
+  background-color: var(--cps-color-fill-primary);
   cursor: ew-resize;
   width: calc(1.75rem + 1px);
-  color: var(--cps-foreground-secondary);
+  color: var(--cps-color-text-secondary);
   font-size: 20px;
 }
 
@@ -72,7 +72,7 @@
 .code-block--expanded .code-block__source::before {
   position: absolute;
   top: 0;
-  background-color: var(--cps-stroke-card-secondary);
+  background-color: var(--cps-color-stroke-card-secondary);
   width: 100%;
   height: 1px;
   content: '';
@@ -86,13 +86,13 @@
   margin: 0;
   border: none;
   border-radius: 0;
-  background-color: var(--cps-fill-solid-primary);
+  background-color: var(--cps-color-background-solid-primary);
 }
 
 .code-block__buttons {
   display: flex;
   position: relative;
-  border-top: solid 1px var(--cps-stroke-card-secondary);
+  border-top: solid 1px var(--cps-color-stroke-card-secondary);
 }
 
 .code-block__button {
@@ -101,17 +101,17 @@
     var(--cps-transition-fast) border;
   border: none;
   border-radius: 0;
-  background-color: var(--cps-fill-control-primary);
+  background-color: var(--cps-color-fill-primary);
   cursor: pointer;
   padding: 0 1rem;
   min-width: 2.5rem;
   height: 2.5rem;
-  color: var(--cps-foreground-primary);
-  font: var(--cps-text-body);
+  color: var(--cps-color-text-primary);
+  font: var(--cps-font-body);
 }
 
 .code-block__button:not(:last-of-type) {
-  border-right: solid 1px var(--cps-stroke-card-secondary);
+  border-right: solid 1px var(--cps-color-stroke-card-secondary);
 }
 
 .code-block__button--html,
@@ -123,7 +123,7 @@
 }
 
 .code-block__button--selected {
-  color: rgb(var(--cps-color-accent-800));
+  color: var(--cps-palette-accent-800);
   font-weight: var(--cps-font-weight-semibold);
 }
 
@@ -143,14 +143,14 @@
 
 .code-block__button:hover {
   z-index: 0.5;
-  background-color: var(--cps-fill-control-secondary);
-  color: var(--cps-foreground-primary);
+  background-color: var(--cps-color-fill-secondary);
+  color: var(--cps-color-text-primary);
 }
 
 .code-block__button:active {
   z-index: 1;
-  background-color: var(--cps-fill-control-tertiary);
-  color: var(--cps-foreground-tertiary);
+  background-color: var(--cps-color-fill-tertiary);
+  color: var(--cps-color-text-tertiary);
 }
 
 .code-block__button:focus-visible {
@@ -187,9 +187,9 @@
   right: 4px;
   transition: 0.1s all;
   border-radius: var(--cps-border-radius-medium);
-  background-color: rgb(var(--cps-color-neutral-500));
+  background-color: var(--cps-palette-neutral-500);
   padding: 6px 8px;
-  font-family: var(--cps-font-sans);
+  font-family: var(--cps-font-family-sans);
   font-size: var(--cps-font-size-xs);
   font-weight: var(--cps-font-weight-semibold);
   user-select: none;
@@ -197,7 +197,7 @@
 
 .markdown-section .docsify-copy-code-button.copied {
   animation: pulse 0.75s;
-  --pulse-color: rgb(var(--cps-color-neutral-600));
+  --pulse-color: var(--cps-palette-neutral-600);
 }
 
 @keyframes pulse {
@@ -228,7 +228,7 @@
 
 .markdown-section .docsify-copy-code-button:active {
   transform: scale(0.92);
-  background-color: rgb(var(--cps-color-neutral-600));
+  background-color: var(--cps-palette-neutral-600);
 }
 
 /* We can apply data-flavor="html|react|vue" to any element on the page to toggle it when the user's flavor changes */
