--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -49,7 +49,7 @@
 
     ::-webkit-scrollbar-thumb:hover {
       border-width: 1px 2px 1px 2px !important;
-      border-radius: 4px !important;
+      border-radius: var(--cps-border-radius-medium) !important;
     }
 
     .cps-theme-dark :hover::-webkit-scrollbar-thumb,
@@ -70,23 +70,23 @@ html {
 }
 
 body {
-  background-color: var(--cps-fill-solid-quaternary);
+  background-color: var(--cps-color-background-solid-quaternary);
   letter-spacing: var(--cps-tracking-normal);
-  color: var(--cps-foreground-primary);
-  font: var(--cps-text-body-large);
+  color: var(--cps-color-text-primary);
+  font: var(--cps-font-body-large);
 }
 
 a {
   transition: color var(--cps-transition-fast);
-  color: var(--cps-foreground-brand-primary);
+  color: var(--cps-color-text-accent-primary);
 }
 
 a:hover {
-  color: var(--cps-foreground-brand-secondary);
+  color: var(--cps-color-text-accent-secondary);
 }
 
 a:active {
-  color: var(--cps-foreground-brand-tertiary);
+  color: var(--cps-color-text-accent-tertiary);
 }
 
 strong {
@@ -96,7 +96,7 @@ strong {
 /* Sidebar */
 .sidebar {
   border-right: 0;
-  background-color: var(--cps-fill-solid-primary);
+  background-color: var(--cps-color-background-solid-primary);
 }
 
 .sidebar .app-name {
@@ -112,7 +112,7 @@ strong {
   margin: -0.125rem 0 0.5rem 0;
   padding: 0 var(--cps-spacing-3);
   text-align: right;
-  color: var(--cps-foreground-secondary);
+  color: var(--cps-color-text-secondary);
   font-size: var(--cps-font-size-xs);
   font-weight: var(--cps-font-weight-normal);
 }
@@ -130,7 +130,7 @@ strong {
   top: 0.25rem;
   left: 0.25rem;
   border-radius: var(--cps-border-radius-medium);
-  background-color: rgb(var(--cps-color-neutral-0));
+  background-color: var(--cps-palette-neutral-0);
   padding: 0.5rem;
   width: 2rem;
   height: 2rem;
@@ -141,7 +141,7 @@ strong {
 }
 
 .sidebar-toggle:active .sidebar-toggle-button span {
-  background-color: rgb(var(--cps-color-accent-600));
+  background-color: var(--cps-palette-accent-600);
 }
 
 .sidebar-toggle:focus {
@@ -189,11 +189,11 @@ strong {
 }
 
 .sidebar-nav a:hover {
-  color: var(--cps-foreground-brand-secondary);
+  color: var(--cps-color-text-brand-secondary);
 }
 
 .sidebar-nav a:active {
-  color: var(--cps-foreground-brand-tertiary);
+  color: var(--cps-color-text-brand-tertiary);
 }
 
 .sidebar-nav a:focus {
@@ -207,19 +207,19 @@ strong {
 
 .sidebar-nav li.collapse > a,
 .sidebar-nav li.active > a {
-  color: var(--cps-foreground-brand-primary);
+  color: var(--cps-color-text-brand-primary);
 }
 
 .cps-theme-dark .sidebar-nav li.collapse > a,
 .cps-theme-dark .sidebar-nav li.active > a {
-  color: var(--cps-foreground-brand-primary);
+  color: var(--cps-color-text-brand-primary);
 }
 
 .sidebar li > p {
   margin: 0 0 0.5rem 1.5rem;
-  border-bottom: solid 1px var(--cps-stroke-separator);
+  border-bottom: solid 1px var(--cps-color-stroke-separator);
   padding-bottom: 0.375rem;
-  font: var(--cps-text-body-large);
+  font: var(--cps-font-body-large);
   font-weight: var(--cps-font-weight-semibold);
 }
 
@@ -231,12 +231,12 @@ strong {
 .sidebar-nav ul ul:not(.app-sub-sidebar) > li > a {
   border-left: 0.25rem solid transparent;
   padding-left: 1.75rem;
-  font: var(--cps-text-body-em);
+  font: var(--cps-font-body-em);
 }
 
 .sidebar-nav ul ul:not(.app-sub-sidebar) > li.collapse > a,
 .sidebar-nav ul ul:not(.app-sub-sidebar) > li.active > a {
-  border-left-color: rgb(var(--cps-color-brand-500));
+  border-left-color: var(--cps-palette-brand-500);
   font-weight: var(--cps-font-weight-semibold);
 }
 
@@ -255,7 +255,7 @@ strong {
   position: absolute;
   left: 2rem;
   z-index: -1;
-  background-color: rgb(var(--cps-color-neutral-200));
+  background-color: var(--cps-palette-neutral-200);
   width: 1px;
   height: 100%;
   content: '';
@@ -271,7 +271,7 @@ strong {
   position: absolute;
   left: 2rem;
   margin-top: 1px;
-  background-color: rgb(var(--cps-color-neutral-200));
+  background-color: var(--cps-palette-neutral-200);
   width: 0.5rem;
   height: 1px;
   content: '';
@@ -283,7 +283,7 @@ strong {
 }
 
 .sidebar ul ul ul > li > a {
-  font: var(--cps-text-body);
+  font: var(--cps-font-body);
 }
 
 /* Splash */
@@ -322,7 +322,7 @@ strong {
 
 .markdown-section .splash-start h1:first-of-type {
   margin: 0.5rem 0;
-  font: var(--cps-text-subtitle);
+  font: var(--cps-font-subtitle);
 }
 
 @media screen and (max-width: 1040px) {
@@ -362,13 +362,13 @@ strong {
 }
 
 .anchor span {
-  color: rgb(var(--cps-color-neutral-1000));
+  color: var(--cps-palette-neutral-1000);
 }
 
 .markdown-section blockquote {
   position: relative;
   margin: 0 0 1rem 0;
-  border-left: solid 4px rgb(var(--cps-color-neutral-200));
+  border-left: solid 4px var(--cps-palette-neutral-200);
   padding: 1rem 1.5rem;
   font-style: italic;
 }
@@ -391,7 +391,7 @@ strong {
 }
 
 .docsify-pagination-container {
-  border-top-color: var(--cps-stroke-separator) !important;
+  border-top-color: var(--cps-color-stroke-separator) !important;
 }
 
 .pagination-item-label,
@@ -401,7 +401,7 @@ strong {
 }
 
 .docsify-pagination-container .pagination-item-title {
-  font: var(--cps-text-title);
+  font: var(--cps-font-title);
 }
 
 .markdown-section h1,
@@ -415,14 +415,14 @@ strong {
 }
 
 .markdown-section h1 {
-  font: var(--cps-text-heading);
+  font: var(--cps-font-heading);
 }
 
 .markdown-section h2 {
   margin-top: 3rem;
-  border-bottom: solid 1px var(--cps-stroke-separator);
+  border-bottom: solid 1px var(--cps-color-stroke-separator);
   padding-bottom: 0.375rem;
-  font: var(--cps-text-title);
+  font: var(--cps-font-title);
 }
 
 .markdown-section h2:first-of-type {
@@ -431,19 +431,19 @@ strong {
 
 .markdown-section h3 {
   margin-top: 2rem;
-  font: var(--cps-text-subtitle);
+  font: var(--cps-font-subtitle);
 }
 
 .markdown-section h4 {
-  font: var(--cps-text-body-large);
+  font: var(--cps-font-body-large);
 }
 
 .markdown-section h5 {
-  font: var(--cps-text-body);
+  font: var(--cps-font-body);
 }
 
 .markdown-section h6 {
-  font: var(--cps-text-body-sm);
+  font: var(--cps-font-body-sm);
 }
 
 .markdown-section h1:first-of-type {
@@ -452,70 +452,70 @@ strong {
 
 /* Inline code and keyboard keys */
 .markdown-section code {
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-small);
-  background-color: var(--cps-fill-solid-primary);
+  background-color: var(--cps-color-background-solid-primary);
   padding: var(--cps-spacing-px) var(--cps-spacing-1);
-  color: var(--cps-foreground-primary);
-  font: var(--cps-text-body);
-  font-family: var(--cps-font-mono);
+  color: var(--cps-color-text-primary);
+  font: var(--cps-font-body);
+  font-family: var(--cps-font-family-mono);
 }
 
 kbd,
 .markdown-section kbd {
-  border: solid 1px var(--cps-stroke-card-secondary);
-  border-radius: 3px;
-  box-shadow: inset 1px 1px 0 1px rgb(var(--cps-color-neutral-0) / 85%),
-    inset -1px -1px 0 1px rgb(var(--cps-color-neutral-1000) / 7.5%),
-    inset 0 0 12px rgb(var(--cps-color-stone-400) / 25%);
-  background: linear-gradient(145deg, rgb(var(--cps-color-neutral-200)), rgb(var(--cps-color-neutral-50)));
+  border: solid 1px var(--cps-color-stroke-card-secondary);
+  border-radius: var(--cps-border-radius-medium);
+  box-shadow: inset 1px 1px 0 1px var(--cps-color-text-inverted-secondary),
+    inset -1px -1px 0 1px var(--cps-color-stroke-primary), inset 0 0 12px var(--cps-color-system-informative-subtle);
+  background: linear-gradient(145deg, var(--cps-palette-neutral-200), var(--cps-palette-neutral-50));
   padding: 2px 5px;
-  color: var(--cps-foreground-primary);
-  font: var(--cps-text-body);
-  font-family: var(--cps-font-mono);
+  color: var(--cps-color-text-primary);
+  font: var(--cps-font-body);
+  font-family: var(--cps-font-family-mono);
 }
 
 .cps-theme-dark kbd,
 .cps-theme-dark .markdown-section kbd {
-  border-color: var(--cps-fill-control-alt-secondary);
-  box-shadow: inset 1px 1px 0 1px rgb(var(--cps-color-neutral-1000) / 15%),
-    inset -1px -1px 0 1px rgb(var(--cps-color-neutral-300) / 50%), inset 0 0 12px rgb(var(--cps-color-stone-600) / 25%);
+  border-color: var(--cps-color-fill-alt-secondary);
+  box-shadow: inset 1px 1px 0 1px var(--cps-color-stroke-secondary),
+    inset -1px -1px 0 1px var(--cps-color-stroke-skeleton-accent),
+    inset 0 0 12px var(--cps-color-system-informative-subtle);
 }
 
 /* Code blocks */
 .markdown-section pre {
   position: relative;
-  font-family: var(--cps-font-mono);
+  font-family: var(--cps-font-family-mono);
   font-size: var(--cps-font-size-sm);
 }
 
 .markdown-section pre > code {
   display: block;
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-solid-primary);
+  background-color: var(--cps-color-background-solid-primary);
   padding: var(--cps-spacing-4);
   overflow: auto;
   tab-size: 2;
-  color: rgb(var(--cps-color-neutral-900));
-  font-family: var(--cps-font-mono);
+  color: var(--cps-palette-neutral-900);
+  font-family: var(--cps-font-family-mono);
   font-size: var(--cps-font-size-sm);
   hyphens: none;
 }
 
 .markdown-section pre .token.comment {
-  color: rgb(var(--cps-color-neutral-500));
+  color: var(--cps-palette-neutral-500);
 }
 
 .markdown-section pre .token.prolog,
 .markdown-section pre .token.doctype,
 .markdown-section pre .token.cdata,
 .markdown-section pre .token.operator {
-  color: rgb(var(--cps-color-neutral-700));
+  color: var(--cps-palette-neutral-700);
 }
 
 .markdown-section pre .token.punctuation {
-  color: rgb(var(--cps-color-neutral-700));
+  color: var(--cps-palette-neutral-700);
 }
 
 .namespace {
@@ -526,12 +526,12 @@ kbd,
 .markdown-section pre .token.keyword,
 .markdown-section pre .token.tag,
 .markdown-section pre .token.url {
-  color: rgb(var(--cps-color-sky-800));
+  color: var(--cps-color-text-code-keyword);
 }
 
 .markdown-section pre .token.symbol,
 .markdown-section pre .token.deleted {
-  color: rgb(var(--cps-color-pink-700));
+  color: var(--cps-color-text-code-symbol);
 }
 
 .markdown-section pre .token.boolean,
@@ -542,24 +542,24 @@ kbd,
 .markdown-section pre .token.char,
 .markdown-section pre .token.builtin,
 .markdown-section pre .token.inserted {
-  color: rgb(var(--cps-color-emerald-700));
+  color: var(--cps-color-text-code-builtin);
 }
 
 .markdown-section pre .token.atrule,
 .markdown-section pre .token.attr-value,
 .markdown-section pre .token.number,
 .markdown-section pre .token.variable {
-  color: rgb(var(--cps-color-violet-700));
+  color: var(--cps-color-text-code-variable);
 }
 
 .markdown-section pre .token.function,
 .markdown-section pre .token.class-name,
 .markdown-section pre .token.regex {
-  color: rgb(var(--cps-color-orange-700));
+  color: var(--cps-color-text-code-function);
 }
 
 .markdown-section pre .token.important {
-  color: rgb(var(--cps-color-red-700));
+  color: var(--cps-color-text-code-important);
 }
 
 .markdown-section pre .token.important,
@@ -602,9 +602,9 @@ kbd,
 }
 
 .markdown-section td {
-  border-top: solid 1px rgb(var(--cps-color-neutral-200));
+  border-top: solid 1px var(--cps-palette-neutral-200);
   border-right: none;
-  border-bottom: solid 1px rgb(var(--cps-color-neutral-200));
+  border-bottom: solid 1px var(--cps-palette-neutral-200);
   border-left: none;
   padding: 0.75rem 0.5rem;
 }
@@ -614,7 +614,7 @@ kbd,
 }
 
 .markdown-section table cps-tooltip code {
-  border-bottom: dashed 1px rgb(var(--cps-color-neutral-300));
+  border-bottom: dashed 1px var(--cps-palette-neutral-300);
   cursor: help;
 }
 
@@ -624,15 +624,15 @@ kbd,
 
 /* Iframes */
 .markdown-section iframe {
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-solid-quaternary);
+  background-color: var(--cps-color-background-solid-quaternary);
   width: 100%;
 }
 
 .markdown-section .codepen {
   position: relative;
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-medium);
   overflow: hidden;
 }
@@ -650,7 +650,7 @@ kbd,
   position: relative;
   border-left: solid 4px transparent;
   border-radius: var(--cps-border-radius-medium);
-  background-color: var(--cps-fill-solid-secondary);
+  background-color: var(--cps-color-background-solid-secondary);
   padding-left: 1.5rem;
 }
 
@@ -664,34 +664,34 @@ kbd,
   height: 20px;
   text-align: center;
   line-height: 20px;
-  color: rgb(var(--cps-color-neutral-0));
+  color: var(--cps-palette-neutral-0);
   font-size: 14px;
   font-weight: bold;
 }
 
 .markdown-section p.warn {
-  border-left-color: rgb(var(--cps-color-accent-600));
+  border-left-color: var(--cps-palette-accent-600);
 }
 
 .markdown-section p.warn:before {
-  background-color: rgb(var(--cps-color-accent-600));
+  background-color: var(--cps-palette-accent-600);
   content: 'i';
 }
 
 .markdown-section p.tip {
-  border-left-color: var(--cps-fill-system-critical);
+  border-left-color: var(--cps-color-system-critical);
 }
 
 .markdown-section p.tip:before {
-  background-color: var(--cps-fill-system-critical);
-  line-height: 18px;
-  font-size: 16px;
+  background-color: var(--cps-color-system-critical);
+  font: var(--cps-font-body-large);
   content: '!';
+  padding-top: 1px;
 }
 
 .markdown-section p.tip code,
 .markdown-section p.warn code {
-  background-color: rgb(var(--cps-color-neutral-100));
+  background-color: var(--cps-palette-neutral-100);
   white-space: nowrap;
 }
 
@@ -708,19 +708,19 @@ kbd,
 
 .component-header__summary {
   margin-top: 2rem;
-  border-top: solid 1px var(--cps-stroke-separator);
+  border-top: solid 1px var(--cps-color-stroke-separator);
   line-height: 1.6;
   font-size: var(--cps-font-size-lg);
 }
 
 .markdown-section .component-header__tag code {
-  border: solid 1px var(--cps-stroke-card-secondary);
+  border: solid 1px var(--cps-color-stroke-card-secondary);
   border-radius: var(--cps-border-radius-small);
-  background-color: var(--cps-fill-solid-primary);
+  background-color: var(--cps-color-background-solid-primary);
   padding: var(--cps-spacing-px) var(--cps-spacing-1);
-  color: var(--cps-foreground-primary);
-  font: var(--cps-text-body);
-  font-family: var(--cps-font-mono);
+  color: var(--cps-color-text-primary);
+  font: var(--cps-font-body);
+  font-family: var(--cps-font-family-mono);
 }
 
 .component-header__info {
@@ -729,15 +729,15 @@ kbd,
 
 /* Repo buttons */
 .repo-button--sponsor cps-icon {
-  color: rgb(var(--cps-color-pink-600));
+  color: var(--cps-color-system-critical);
 }
 
 .repo-button--star cps-icon {
-  color: rgb(var(--cps-color-amber-600));
+  color: var(--cps-color-system-warning);
 }
 
 .repo-button--fork cps-icon {
-  color: rgb(var(--cps-color-neutral-700));
+  color: var(--cps-color-system-neutral);
 }
 
 @media screen and (max-width: 400px) {
@@ -754,7 +754,7 @@ body[data-page^='/variáveis-de-estilo/'] .table-wrapper td:first-child code {
 
 /* Border radius demo */
 .border-radius-demo {
-  background-color: rgb(var(--cps-color-accent-600));
+  background-color: var(--cps-palette-accent-600);
   width: 3rem;
   height: 3rem;
 }
@@ -762,7 +762,7 @@ body[data-page^='/variáveis-de-estilo/'] .table-wrapper td:first-child code {
 /* Transition demo */
 .transition-demo {
   position: relative;
-  background-color: rgb(var(--cps-color-neutral-200));
+  background-color: var(--cps-palette-neutral-200);
   width: 8rem;
   height: 2rem;
 }
@@ -773,7 +773,7 @@ body[data-page^='/variáveis-de-estilo/'] .table-wrapper td:first-child code {
   left: 0;
   transition-duration: inherit;
   transition-property: width;
-  background-color: rgb(var(--cps-color-accent-600));
+  background-color: var(--cps-palette-accent-600);
   width: 0;
   height: 100%;
   content: '';
@@ -785,14 +785,14 @@ body[data-page^='/variáveis-de-estilo/'] .table-wrapper td:first-child code {
 
 /* Spacing demo */
 .spacing-demo {
-  background-color: rgb(var(--cps-color-accent-600));
+  background-color: var(--cps-palette-accent-600);
   width: 100px;
 }
 
 /* Elevation demo */
 .elevation-demo {
   margin: 1rem;
-  border-radius: 3px;
+  border-radius: var(--cps-border-radius-medium);
   background: transparent;
   width: 4rem;
   height: 4rem;
@@ -828,7 +828,7 @@ body[data-page^='/variáveis-de-estilo/'] .table-wrapper td:first-child code {
 }
 
 .color-palette__swatch--border {
-  box-shadow: inset 0 0 0 1px rgb(var(--cps-color-neutral-300));
+  box-shadow: inset 0 0 0 1px var(--cps-palette-neutral-300);
 }
 
 @media screen and (max-width: 1200px) {
