fix: use CSS vars for all border colors

--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -351,6 +351,7 @@
   --cps-input-border-color: var(--cps-color-fill-alt-tertiary);
   --cps-input-border-bottom-width: var(--cps-spacing-0-5);
   --cps-input-border-bottom-color: var(--cps-color-text-tertiary);
+  --cps-input-border-bottom-color-focus: var(--cps-color-fill-accent-primary);
 
   --cps-input-background: var(--cps-color-fill-primary);
   --cps-input-background-hover: var(--cps-color-fill-secondary);
