--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -16,17 +16,17 @@
 
   /* Neutral */
   --cps-palette-neutral-0: rgb(255 255 255);
-  --cps-palette-neutral-50: rgb(250 250 250);
-  --cps-palette-neutral-100: rgb(245 245 245);
-  --cps-palette-neutral-200: rgb(229 229 229);
-  --cps-palette-neutral-300: rgb(212 212 212);
-  --cps-palette-neutral-400: rgb(163 163 163);
-  --cps-palette-neutral-500: rgb(115 115 115);
-  --cps-palette-neutral-600: rgb(82 82 82);
-  --cps-palette-neutral-700: rgb(64 64 64);
-  --cps-palette-neutral-800: rgb(38 38 38);
-  --cps-palette-neutral-900: rgb(23 23 23);
-  --cps-palette-neutral-950: rgb(11 11 11);
+  --cps-palette-neutral-50: rgb(0 0 0 / 1.8%);
+  --cps-palette-neutral-100: rgb(0 0 0 / 3.8%);
+  --cps-palette-neutral-200: rgb(0 0 0 / 10%);
+  --cps-palette-neutral-300: rgb(0 0 0 / 17%);
+  --cps-palette-neutral-400: rgb(0 0 0 / 36%);
+  --cps-palette-neutral-500: rgb(0 0 0 / 54.8%);
+  --cps-palette-neutral-600: rgb(0 0 0 / 68%);
+  --cps-palette-neutral-700: rgb(0 0 0 / 75%);
+  --cps-palette-neutral-800: rgb(0 0 0 / 85%);
+  --cps-palette-neutral-900: rgb(0 0 0 / 91%);
+  --cps-palette-neutral-950: rgb(0 0 0 / 95.5%);
   --cps-palette-neutral-1000: rgb(0 0 0);
 
   /* Brand */
