--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -1,61 +1,12 @@
 @supports (scrollbar-width: thin) {
   * {
     scrollbar-width: thin;
-    scrollbar-color: rgba(0 0 0 / 100%) rgba(0 0 0 / 5%);
+    scrollbar-color: var(--cps-color-text-tertiary) transparent;
   }
-}
 
-@supports (overflow: overlay) {
-  @media (hover: hover) and (pointer: fine) {
-    body,
-    aside.sidebar {
-      overflow-y: overlay;
-    }
-
-    ::-webkit-scrollbar {
-      box-shadow: inset 4px 0 0 rgba(0 0 0 / 0%) !important;
-      background-color: transparent !important;
-      width: 8px !important;
-      height: 8px !important;
-    }
-
-    ::-webkit-scrollbar-button {
-      display: none !important;
-      width: 0 !important;
-      height: 0 !important;
-    }
-
-    ::-webkit-scrollbar-corner {
-      background-color: transparent !important;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      border-width: 1px 0 1px 6px !important;
-      border-style: solid !important;
-      border-radius: 0 !important;
-      border-color: transparent !important;
-      background-clip: padding-box !important;
-      background-color: rgba(0 0 0 / 0%) !important;
-    }
-
-    ::-webkit-scrollbar:hover {
-      box-shadow: inset 0 0 8px rgba(0 0 0 / 10%) !important;
-    }
-
-    :hover::-webkit-scrollbar-thumb,
-    ::-webkit-scrollbar-thumb:hover {
-      background-color: rgba(0 0 0 / 100%) !important;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      border-width: 1px 2px 1px 2px !important;
-      border-radius: var(--cps-border-radius-medium) !important;
-    }
-
-    .cps-theme-dark :hover::-webkit-scrollbar-thumb,
-    .cps-theme-dark ::-webkit-scrollbar-thumb:hover {
-      background-color: rgba(255 255 255 / 75%) !important;
-    }
+  .sidebar {
+    scrollbar-width: thin;
+    scrollbar-color: var(--cps-color-text-tertiary) transparent;
   }
 }
 
