--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -7,7 +7,7 @@
    * Textures
    */
 
-  --cps-texture-acrylic: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.2' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+  --cps-texture-acrylic: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect opacity='0.1' width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
 
   /*
    * Theme Colors
@@ -62,31 +62,31 @@
   --cps-color-state-neutral: rgb(157 157 157);
   --cps-color-state-neutral-subtle: rgb(255 255 255 / 3.26%);
   --cps-color-state-neutral-acrylic: linear-gradient(rgb(157 157 157 / 96%), rgb(157 157 157 / 96%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   /* Informative */
   --cps-color-state-informative: rgb(96 205 255);
   --cps-color-state-informative-subtle: rgba(255 255 255 / 3.26%);
   --cps-color-state-informative-acrylic: linear-gradient(rgb(48 48 48 / 96%), rgb(48 48 48 / 96%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   /* Warning */
   --cps-color-state-warning: rgb(252 225 0);
   --cps-color-state-warning-subtle: rgb(67 53 25);
   --cps-color-state-warning-acrylic: linear-gradient(rgb(67 53 25 / 96%), rgb(67 53 25 / 96%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   /* Critical */
   --cps-color-state-critical: rgb(255 153 164);
   --cps-color-state-critical-subtle: rgb(68 39 38);
   --cps-color-state-critical-acrylic: linear-gradient(rgb(68 39 38 / 96%), rgb(68 39 38 / 96%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   /* Success */
   --cps-color-state-success: rgb(108 203 95);
   --cps-color-state-success-subtle: rgb(57 61 27);
   --cps-color-state-success-acrylic: linear-gradient(rgb(57 61 27 / 96%), rgb(57 61 27 / 96%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   /*
    * General Component Colors
@@ -98,9 +98,12 @@
   --cps-color-background-solid-tertiary: rgb(40 40 40);
   --cps-color-background-solid-quaternary: rgb(44 44 44);
 
-  --cps-color-background-acrylic: linear-gradient(rgb(44 44 44 / 88%), rgb(44 44 44 / 88%)), var(--cps-texture-acrylic);
+  --cps-color-background-acrylic: linear-gradient(rgb(44 44 44 / 88%), rgb(44 44 44 / 88%)),
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
+  --cps-color-background-acrylic-subtle: linear-gradient(rgb(44 44 44 / 44%), rgb(44 44 44 / 44%)),
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
   --cps-color-background-acrylic-base: linear-gradient(rgb(32 32 32 / 95%), rgb(32 32 32 / 95%)),
-    var(--cps-texture-acrylic);
+    var(--cps-texture-acrylic) 0/75px repeat fixed;
 
   --cps-color-background-overlay: rgba(0 0 0 / 43%);
 
@@ -109,6 +112,12 @@
   --cps-color-fill-secondary: rgb(255 255 255 / 8.37%);
   --cps-color-fill-tertiary: rgb(255 255 255 / 3.26%);
   --cps-color-fill-disabled: rgb(255 255 255 / 4.19%);
+
+  --cps-color-fill-card-primary: rgb(255 255 255 / 5.12%);
+  --cps-color-fill-card-secondary: rgb(255 255 255 / 3.26%);
+  --cps-color-fill-card-tertiary: rgb(20 20 20);
+
+  --cps-color-fill-on-acrylic: rgb(0 0 0 / 65%);
 
   --cps-color-fill-alt-secondary: rgb(0 0 0 / 10%);
   --cps-color-fill-alt-tertiary: rgb(255 255 255 / 5.78%);
