--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -174,6 +174,11 @@ strong {
   font-weight: var(--cps-font-weight-semibold);
 }
 
+.sidebar li small {
+  color: var(--cps-color-text-secondary);
+  font: var(--cps-font-label);
+}
+
 .sidebar ul li ul {
   margin: 0 0 1.5rem 0;
   padding-left: 0;
