refactor(themes): rename background-overlay to backdrop

--- a/docs/assets/plugins/search/search.css
+++ b/docs/assets/plugins/search/search.css
@@ -28,7 +28,7 @@ body.site-search-visible {
   bottom: 0;
   left: 0;
   z-index: -1;
-  background: var(--cps-color-background-overlay);
+  background: var(--cps-color-backdrop);
 }
 
 .site-search__panel {
