--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -108,7 +108,7 @@
   --cps-color-background-acrylic-base: linear-gradient(rgb(243 243 243 / 90%), rgb(243 243 243 / 90%)),
     var(--cps-texture-acrylic) 0/75px repeat fixed;
 
-  --cps-color-background-overlay: rgb(113 113 122 / 33%);
+  --cps-color-backdrop: rgb(113 113 122 / 33%);
 
   /* Fill colors */
   --cps-color-fill-brand: var(--cps-palette-brand-600);
