--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -48,6 +48,7 @@ strong {
 .sidebar {
   border-right: 0;
   background-color: var(--cps-color-background-solid-primary);
+  z-index: auto !important;
 }
 
 .sidebar .app-name {
