--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -117,6 +117,9 @@
   --cps-color-fill-tertiary: rgb(255 255 255 / 3.26%);
   --cps-color-fill-disabled: rgb(255 255 255 / 4.19%);
 
+  --cps-color-fill-control-solid: rgb(69 69 69);
+  --cps-color-fill-control-disabled-solid: rgb(110, 110, 110);
+
   --cps-color-fill-card-primary: rgb(255 255 255 / 5.12%);
   --cps-color-fill-card-secondary: rgb(255 255 255 / 3.26%);
   --cps-color-fill-card-tertiary: rgb(20 20 20);
